paper_experimental_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/initialization_3/sample_003/target.compile.log
error[E0308]: mismatched types
  --> benchmark_results/2026-05-10T00-24-35/grok-code-fast-1/declarations/initialization_3/sample_003/target.rs:13:30
   |
13 |     let y2: [[i32; 3]; 4] = [1, 3, 5, 2, 4, 6, 3, 5, 7, 0, 0, 0];
   |                              ^ expected `[i32; 3]`, found integer

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.